<resources>
    <string name="app_name">TestApp3</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
</resources>